refactor(identity): clean up validator package - remove dead code and unnecessary wrapper